feat: Introduce lazy JBang JAR build