@@ -15,15 +15,24 @@
  */
 package com.datasqrl.util;
 
+import static com.datasqrl.packager.preprocess.JBangPreprocessor.JBANG_BUILD_TIME;
+
+import com.datasqrl.packager.preprocess.JBangPreprocessor.JBangFileInfo;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.util.Deque;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarOutputStream;
+import java.util.jar.Manifest;
+import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -35,6 +44,7 @@ import org.apache.commons.exec.DefaultExecutor;
 public class JBangRunner {
 
   private static final String META_INF_PREFIX = "META-INF/";
+  private static final String META_INF_SERVICES_PREFIX = META_INF_PREFIX + "services/";
 
   private volatile Boolean available = null;
 
@@ -46,7 +56,7 @@ public class JBangRunner {
     return new DisabledRunner();
   }
 
-  public void exportFatJar(List<Path> srcFiles, Path targetFile) throws IOException {
+  public void exportFatJar(Deque<JBangFileInfo> jBangFiles, Path targetFile) throws IOException {
     if (!isJBangAvailable()) {
       return;
     }
@@ -60,58 +70,115 @@ public class JBangRunner {
             .addArgument("--output")
             .addArgument(targetFile.toString());
 
-    for (int i = 1; i < srcFiles.size(); i++) {
-      cmdLine.addArgument("--sources");
-      cmdLine.addArgument(srcFiles.get(i).toString());
-    }
+    jBangFiles.stream()
+        .skip(1)
+        .forEach(
+            source -> {
+              cmdLine.addArgument("--sources");
+              cmdLine.addArgument(source.file().toString());
+            });
 
-    cmdLine.addArgument(srcFiles.get(0).toString());
+    cmdLine.addArgument(jBangFiles.getFirst().file().toString());
 
     var executor = DefaultExecutor.builder().get();
     executor.setExitValue(0);
     executor.execute(cmdLine);
 
     try {
-      cleanFatJar(targetFile);
+      rebuildFatJar(targetFile, List.copyOf(jBangFiles));
     } catch (IOException e) {
-      log.warn("Failed to clean fat JAR", e);
+      log.warn("Failed to rebuild fat JAR", e);
     }
   }
 
-  // Rebuild the JBang fat JAR to drop signed-jar signature files and deduplicate entries,
-  // which otherwise trigger SecurityException / ZipException when Flink loads the UDF JAR.
-  void cleanFatJar(Path fatJar) throws IOException {
+  /**
+   * Rebuilds the JBang fat JAR to:
+   *
+   * <ol>
+   *   <li>add the current build time and generated UDF Service Loader descriptors,
+   *   <li>remove signed-JAR signature files, and
+   *   <li>deduplicate entries that otherwise trigger SecurityException or ZipException when Flink
+   *       loads the UDF JAR.
+   * </ol>
+   */
+  void rebuildFatJar(Path fatJar, List<JBangFileInfo> jBangFiles) throws IOException {
     var tempJar = fatJar.resolveSibling(fatJar.getFileName().toString() + ".tmp");
     var addedEntries = new HashSet<String>();
-    try (var inJar = new JarFile(fatJar.toFile());
-        var outJar = new JarOutputStream(Files.newOutputStream(tempJar))) {
-      var entries = inJar.entries();
-      while (entries.hasMoreElements()) {
-        var entry = entries.nextElement();
-        var name = entry.getName();
+    var serviceEntries =
+        jBangFiles.stream()
+            .collect(
+                Collectors.groupingBy(
+                    file -> META_INF_SERVICES_PREFIX + file.parentUdfClassName(),
+                    LinkedHashMap::new,
+                    Collectors.mapping(JBangFileInfo::udfClassName, Collectors.toList())));
 
-        if (entry.isDirectory()) {
-          continue;
-        }
-        if (isSignatureFile(name)) {
-          continue;
-        }
-        if (!addedEntries.add(name)) {
-          continue;
+    try (var inJar = new JarFile(fatJar.toFile())) {
+      var manifest = inJar.getManifest();
+      if (manifest == null) {
+        manifest = new Manifest();
+        manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0");
+      }
+      manifest
+          .getMainAttributes()
+          .putValue(JBANG_BUILD_TIME, String.valueOf(System.currentTimeMillis()));
+
+      try (var outJar = new JarOutputStream(Files.newOutputStream(tempJar), manifest)) {
+        var entries = inJar.entries();
+        while (entries.hasMoreElements()) {
+          var entry = entries.nextElement();
+          var name = entry.getName();
+
+          if (entry.isDirectory() || name.equalsIgnoreCase("META-INF/MANIFEST.MF")) {
+            continue;
+          }
+          if (isSignatureFile(name)) {
+            continue;
+          }
+          if (!addedEntries.add(name)) {
+            continue;
+          }
+
+          outJar.putNextEntry(new JarEntry(name));
+          try (var is = inJar.getInputStream(entry)) {
+            if (serviceEntries.containsKey(name)) {
+              appendServiceClasses(outJar, is.readAllBytes(), serviceEntries.get(name));
+            } else {
+              is.transferTo(outJar);
+            }
+          }
+          outJar.closeEntry();
         }
 
-        outJar.putNextEntry(new JarEntry(name));
-        try (var is = inJar.getInputStream(entry)) {
-          is.transferTo(outJar);
+        for (var serviceEntry : serviceEntries.entrySet()) {
+          if (addedEntries.contains(serviceEntry.getKey())) {
+            continue;
+          }
+          outJar.putNextEntry(new JarEntry(serviceEntry.getKey()));
+          appendServiceClasses(outJar, new byte[0], serviceEntry.getValue());
+          outJar.closeEntry();
         }
-        outJar.closeEntry();
       }
     }
 
     var originalSize = Files.size(fatJar);
     Files.move(tempJar, fatJar, StandardCopyOption.REPLACE_EXISTING);
     var newSize = Files.size(fatJar);
-    log.debug("Cleaned fat JAR: {} -> {} bytes", originalSize, newSize);
+    log.debug("Rebuilt fat JAR: {} -> {} bytes", originalSize, newSize);
+  }
+
+  private static void appendServiceClasses(
+      JarOutputStream outJar, byte[] existingContent, List<String> udfClassNames)
+      throws IOException {
+    if (existingContent.length > 0) {
+      outJar.write(existingContent);
+      if (existingContent[existingContent.length - 1] != '\n') {
+        outJar.write('\n');
+      }
+    }
+    for (var udfClassName : udfClassNames) {
+      outJar.write(udfClassName.getBytes(StandardCharsets.UTF_8));
+      outJar.write('\n');
+    }
   }
 
   private static boolean isSignatureFile(String entryName) {
@@ -157,7 +224,7 @@ public class JBangRunner {
   private static class DisabledRunner extends JBangRunner {
 
     @Override
-    public void exportFatJar(List<Path> srcFiles, Path targetFile) {
+    public void exportFatJar(Deque<JBangFileInfo> srcFiles, Path targetFile) {
       // do nothing
     }
 
